plugins {
    id 'nva.fetch.doi.rootplugin'
}

//workaround for jacoco-merge to work
allprojects{
    apply plugin: 'nva.fetch.doi.java-conventions'
}

tasks.withType(JavaCompile) {
    options.release = 21
}

wrapper{
    distributionType = Wrapper.DistributionType.ALL
    gradleVersion = '8.6'
}

configurations {
    xsd2java
}

